Clears and chips icon alignement fix (#2310)
* feat(front) : use a single svg for chip-kill to prevent alignments issues

* feat(front) : use a single svg for clear icon to prevent alignments issues

* feat(front) : add mask ; remove unused icon

* feat(front) : PR feedback

* css var displayed in vars

* fix lint issues

* fix lint

* fix stories

* remove lu-icon on selects

---------

--- a/packages/scss/src/components/clear/component.scss
+++ b/packages/scss/src/components/clear/component.scss
@@ -3,30 +3,50 @@
 @use '@lucca-front/icons/src/icon/exports' as icon;
 
 @mixin component {
-  @include reset.button;
-  @include icon.XS;
+	@include reset.button;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr;
+	grid-template-areas: 'main';
+	align-items: normal;
+	flex-shrink: 0;
+	width: var(--components-clear-size);
+	height: var(--components-clear-size);
+	border-radius: 50%;
 
-  align-items: center;
-  background-color: var(--palettes-grey-700);
-  border-radius: 50% !important;
-  color: var(--palettes-grey-text);
-  display: flex;
-  height: var(--components-clear-size);
-  justify-content: center;
-  text-decoration: none;
-  width: var(--components-clear-size);
+	&::before,
+	&::after {
+		content: '';
+		grid-area: main;
+	}
 
+	&::before {
+		border-radius: 50%;
+		background-color: var(--components-clear-background);
+	}
 
-  &:hover {
-    background-color: var(--palettes-grey-600);
-    color: var(--palettes-grey-text);
-  }
+	&::after {
+		mask-image: var(--components-clear-background-image);
+		mask-size: var(--components-clear-size);
+		mask-repeat: no-repeat;
+		background-color: var(--components-clear-cross-color);
+	}
 
-  &:focus-visible {
-    @include a11y.focusVisible();
-  }
+	&:hover {
+		--components-clear-cross-color: var(--palettes-grey-text);
+		--components-clear-background: var(--palettes-grey-600);
+	}
 
-  &:active {
-    background-color: var(--palettes-grey-800);
-  }
+	&:focus-visible {
+		@include a11y.focusVisible($borderRadius: 50%);
+	}
+
+	&:active {
+		--components-clear-background: var(--palettes-grey-800);
+	}
+
+	//to prevent breaking change. lucca-icon is no longer needed.
+	.lucca-icon {
+		display: none;
+	}
 }
